--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "19           5.1          3.8           1.5          0.3  setosa"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,34 +630,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "#sepal length\n",
-    "\n",
-    "sepallen = sns.violinplot(x=\"species\", y=\"sepal_length\", data=iris, palette=\"bright\", figsize=\"10, 10\")\n",
+    "pc = \"bright\" #palette color\n",
+    "fs = \"10, 10\" #figsize\n",
+    "x = \"species\"\n",
+    "sepallen = sns.violinplot(x=x, y=\"sepal_length\", data=iris, palette=pc, figsize=fs)\n",
     "#plt.show(sepallen)\n",
     "plt.savefig(\"sepal_length.jpeg\")\n",
     "plt.close()\n",
     "\n",
     "#sepal width\n",
-    "sepalwid = sns.violinplot(x=\"species\", y=\"sepal_width\", data=iris, palette='bright', figsize=\"10, 10\")\n",
+    "sepalwid = sns.violinplot(x=x, y=\"sepal_width\", data=iris, palette=pc, figsize=fs)\n",
     "#plt.show(sepalwid)\n",
     "plt.savefig(\"sepal_width.jpeg\")\n",
     "plt.close()\n",
     "\n",
     "#petal length\n",
-    "petallen = sns.violinplot(x=\"species\", y=\"petal_length\", data=iris, palette='bright', figsize=\"10, 10\")\n",
+    "petallen = sns.violinplot(x=x, y=\"petal_length\", data=iris, palette=pc, figsize=fs)\n",
     "#plt.show(petallen)\n",
     "plt.savefig(\"petal_length.jpeg\")\n",
     "plt.close()\n",
     "\n",
     "#petal width\n",
-    "petalwid = sns.violinplot(x=\"species\", y=\"petal_width\", data=iris, palette='bright', figsize=\"10, 10\")\n",
+    "petalwid = sns.violinplot(x=x, y=\"petal_width\", data=iris, palette=pc, figsize=fs)\n",
     "#plt.show(petalwid)\n",
     "plt.savefig(\"petal_width.jpeg\")\n",
-    "plt.close()"
+    "plt.close()\n",
+    "\n",
+    "#REF https://matplotlib.org/stable/gallery/statistics/violinplot.html"
    ]
   },
   {
